--- a/Lab11/app/src/main/AndroidManifest.xml
+++ b/Lab11/app/src/main/AndroidManifest.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.lab11">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab11"
-        tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+        android:theme="@style/Theme.Lab11">
+
+        <!-- 定義 MainActivity -->
+        <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- 定義 RaceActivity -->
+        <activity android:name=".RaceActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
